# frappe-bench

./: Procfile  apps.txt  create_day_team_salary_structures.py  create_salary_structures.py  import_remaining_employees.py
apps/auto_leave_assignment/: README.md  pyproject.toml  setup.py
apps/auto_leave_assignment/auto_leave_assignment/: core.py  hooks.py  modules.txt
apps/auto_leave_assignment/auto_leave_assignment.egg-info/: PKG-INFO  SOURCES.txt
apps/auto_leave_assignment/auto_leave_assignment/api/: dashboard_api.py
apps/auto_leave_assignment/auto_leave_assignment/auto_leave_assignment/doctype/auto_leave_log/: auto_leave_log.json  auto_leave_log.py
apps/auto_leave_assignment/auto_leave_assignment/auto_leave_assignment/page/auto_leave_dashboard/: auto_leave_dashboard.js  auto_leave_dashboard.json  auto_leave_dashboard.py
apps/auto_leave_assignment/auto_leave_assignment/config/: desktop.py
apps/auto_leave_assignment/auto_leave_assignment/events/: attendance_events.py
apps/auto_leave_assignment/auto_leave_assignment/scheduled_tasks/: auto_leave_task.py
apps/frappe/frappe/: create_day_team_salary_structures.py  hooks.py
apps/frappe/frappe/utils/: data.py
config/: nginx.conf  supervisor.conf
logs/: frappe.log.2  frappe.log.3  worker.log.9
sites/: apps.json  apps.txt
sites/79.72.76.67/: site_config.json  touched_tables.json
sites/79.72.76.67/logs/: database.log.1  database.log.2  database.log.3  database.log.4  database.log.5  database.log.6  database.log.7  database.log.8  frappe.log.1
sites/assets/: assets-rtl.json  assets.json
(+27 files in other folders)
